--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/jpeg" href="/favicon.jpg" />
 
-    <title>CBC Education Platform</title>
+    <title>CBE Education Platform</title>
 
     <!-- SEO -->
     <meta
       name="description"
-      content="National CBC/CBE Education Platform for managing schools, teachers, learners, and competency-based assessments."
+      content="CBE Education Platform for managing schools, teachers, learners, and competency-based assessments."
     />
     <meta name="author" content="CBC Education Platform" />
 
